# njin

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .gn  BUILD.gn
core/: BUILD.gn  allocator.cpp  allocator.h  allocator_internal.cpp  allocator_internal.h  bit_stream.cpp  bit_stream.h  build.h  compiler.h  core_allocators.cpp  core_allocators.h  core_init.cpp  core_init.h  debug.h  debug_linux.cpp  debug_win.cpp  dynamic_array.h  dynamic_array.inl  dynamic_lib.h  dynamic_lib_linux.cpp  dynamic_lib_win.cpp  file.cpp  file.h  file_internal.h  file_linux.cpp  file_utils.cpp  file_utils.h  file_win.cpp  free_list_allocator.cpp  free_list_allocator.h  hash_table.cpp  hash_table.h  linear_allocator.h  linear_allocator.inl  log.cpp  log.h  mono_time.h  mono_time_linux.cpp  mono_time_win.cpp  njtype.h  (+13 more)
core/gfx/: cam.cpp  cam.h
core/loader/: dae.cpp  dae.h  obj.cpp  obj.h  png.cpp  png.h  tga.cpp  tga.h
core/math/: README.md  float.h  float.inl  gdb_math.py  mat4.h  mat4.inl  math.natvis  plane.h  quat.h  quat.inl  ray.h  ray.inl  sphere.h  transform.h  transform.inl  triangle.h  vec2.h  vec2.inl  vec3.h  vec3.inl  vec4.h  vec4.inl
core/window/: input.h  window.h  window_win.cpp  window_x11.cpp
sample/: BUILD.gn  dx12_sample.cpp  phong_ps  phong_vs  rtt.hlsl  shader.hlsl  shadow.hlsl  ui.hlsl
window/: BUILD.gn  input.h  window.h  window_win.cpp  window_x11.cpp
