##----------------------------------------------------------------------------##
## .gn                                                                        ##
##                                                                            ##
## This file is distributed under the MIT License.                            ##
## See LICENSE.txt for details.                                               ##
## Copyright (C) Tran Tuan Nghia <trantuannghia95@gmail.com> 2018             ##
##----------------------------------------------------------------------------##

buildconfig = "//build/config/BUILDCONFIG.gn"
