##----------------------------------------------------------------------------##
## This file is distributed under the MIT License.                            ##
## See LICENSE.txt for details.                                               ##
## Copyright (C) Tran Tuan Nghia <trantuannghia95@gmail.com> 2019             ##
##----------------------------------------------------------------------------##

static_library("window") {
  sources = [
    "input.h",
    "window.h",
  ]

  if (is_win) {
    sources += [
      "window_win.cpp",
    ]

    libs = [
      "Gdi32.lib",
      "User32.lib"
    ]
  }

  if (is_linux) {
    sources += [
      "window_x11.cpp",
    ]

    libs = [
      "X11",
      "xcb",
      "xcb-keysyms",
      "X11-xcb",
    ]
  }

  deps = [
    "//core",
  ]
}
